# auto-resume

./: .gitignore  Cargo.toml  README.md  config.default.toml  flake.nix  rust-toolchain.toml
nix/: package.nix
src/: main.rs
src/chat/: agent.rs  prompt_template.txt  system_prompt.txt
src/latex/: assembler.rs  template.tex
src/models/: github.rs
src/scraper/: github.rs  job.rs  mod.rs
src/utils/: cache.rs  cli.rs  config.rs  log.rs  misc.rs  mod.rs  select_repos.rs
