[package]
name = "auto-resume"
version = "0.1.0"
edition = "2024"

[dependencies]
backon = "1.6.0"
base64 = "0.22.1"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive"] }
colog = "1.4.0"
colored = "3.1.1"
easy-config-store = "0.2.2"
env_logger = "0.11.8"
eyre = "0.6.12"
log = "0.4.29"
rayon = "1.8"
regex = "1.12.3"
reqwest = { version = "0.13.1", features = ["json"] }
rig-core = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tectonic = { version = "0.15.0", features = ["external-harfbuzz"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
